--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ristorante</title>
+    <link rel="icon" type="image/x-icon" href="./assets/masterchef.ico">
+    <link rel="stylesheet" href="./style.css">
+    <title>ProveCss</title>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            NavPage
+        </h1>
+        <nav>
+            <a href="./provacss.html">provacss</a>
+            <a href="./provedisplay.html">provadisplay</a>
+            <a href="./provaposition.html">provaposition</a>
+        </nav>
+    </header>
 </body>
 </html>
