--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="./provacss.html">provacss</a>
             <a href="./provedisplay.html">provadisplay</a>
             <a href="./provaposition.html">provaposition</a>
+            <a href="./flex.html">provaflex</a>
         </nav>
     </header>
 </body>
