commit pulizia css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="./provedisplay.html">provadisplay</a>
             <a href="./provaposition.html">provaposition</a>
             <a href="./flex.html">provaflex</a>
+            <a href="./grid.html">provagrid</a>
         </nav>
     </header>
 </body>
