commit pulizia css

--- a/grid.html
+++ b/grid.html
@@ -8,10 +8,11 @@
     <title>GRID</title>
 </head>
 <body>
+    <!-- Esempio pulizia css
     <button class="bgc-red mono-xxl pad-max">button1</button>
     <button class="bgc-lblue pad-avg">button2</button>
     <button class="bgc-red pad-avg">button3</button>
     <button class="mono-xxl pad-max">button4</button>
-    <button class="courier-xxs bgc-lblue pad-min">button5</button>
+    <button class="courier-xxs bgc-lblue pad-min">button5</button> -->
 </body>
 </html>
