--- a/grid.html
+++ b/grid.html
@@ -8,11 +8,20 @@
     <title>GRID</title>
 </head>
 <body>
-    <!-- Esempio pulizia css
+    <!-- Esempio pulizia css    
     <button class="bgc-red mono-xxl pad-max">button1</button>
     <button class="bgc-lblue pad-avg">button2</button>
     <button class="bgc-red pad-avg">button3</button>
     <button class="mono-xxl pad-max">button4</button>
     <button class="courier-xxs bgc-lblue pad-min">button5</button> -->
+    <div class="grid-container">
+        <div class="g-i-1 grid-dim"></div>
+        <div class="g-i-2 grid-dim"></div>
+        <div class="g-i-3 grid-dim"></div>
+        <div class="g-i-4 grid-dim"></div>
+        <div class="g-i-5 grid-dim"></div>
+        <div class="g-i-6 grid-dim"></div>
+        <div class="g-i-7 grid-dim"></div>
+    </div>
 </body>
 </html>
